--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,27 @@
     .sidebar-icon{
         @apply  relative flex items-center justify-center h-12 w-12 mx-auto my-2 shadow-lg
                  bg-lightgrey17b text-white17b hover:bg-orange17b rounded-full hover:rounded-xl
-                 transition-all duration-300 ease-linear cursor-pointer;
+                 transition-all duration-100 ease-linear cursor-pointer;
                 
+    }
+    .sidebar-tooltip{
+        @apply absolute w-auto p-2 m-2 min-w-max left-14
+                rounded-md shadow-md
+                text-white17b bg-darkgrey17b
+                text-xs font-bold
+                transition-all duration-100 scale-0 origin-left;
+    }
+    .topbar-icon{
+        @apply  relative flex items-center justify-center h-12 w-12 mx-auto my-2 shadow-lg
+                 bg-lightgrey17b text-white17b hover:bg-orange17b rounded-full hover:rounded-xl
+                 transition-all duration-100 ease-linear cursor-pointer;
+                
+    }
+    .topbar-tooltip{
+        @apply absolute w-auto p-2 m-2 min-w-max top-14
+                rounded-md shadow-md
+                text-white17b bg-darkgrey17b
+                text-xs font-bold
+                transition-all duration-100 scale-0 origin-left;
     }
 }
