--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
     }
     .topbar-icon-small{
         @apply  relative flex items-center justify-center h-6 w-6 mx-auto my-2 shadow-lg
-                 bg-lightgrey17b text-white17b hover:bg-orange17b rounded-full hover:rounded-xl
+                 bg-orange17b text-white17b hover:bg-yellow17b hover:text-darkgrey17b rounded-full hover:rounded-xl
                   cursor-pointer;
                 
     }    
