--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,7 @@
 /*** Content ***/
 /*******************************************************************************************************************/
     .content{
-        @apply responsive-w
-            min-h-screen bg-lightgrey17b
+        @apply responsive-w bg-lightgrey17b
             pt-0 md:pt-0
                 
     }
